# d-mate

./: .gitignore  CLAUDE.md  DESIGN.md  INSTALL.md  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: build.yml
src/: App.svelte
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: alert_hub.rs  checker.rs  commands.rs  crypto.rs  database.rs  desk_client.rs  keyring_store.rs  lib.rs  mail_checker.rs  main.rs  models.rs  mqtt_client.rs  native_notify.rs  notification_rules.rs  scheduler.rs  swork_client.rs  telegram.rs
src/assets/: global.css
src/components/: Card.svelte  Confetti.svelte  ConfirmDialog.svelte  ConnBadge.svelte  ConnBanner.svelte  RuleBlock.svelte  Sidebar.svelte  Toast.svelte  Toggle.svelte  Tooltip.svelte
src/lib/: api.js  dialog.js  dirty.js  easter.js  stores.js
src/pages/: ChatPage.svelte  ConnectionManager.svelte  Dashboard.svelte  FeedbackPage.svelte  MailAlerts.svelte  ManagerAlerts.svelte  MessagePage.svelte  ServiceMail.svelte  ServiceSwork.svelte  SystemPage.svelte  WorkerAlerts.svelte
