[package]
name = "d-mate"
version = "1.0.0"
description = "D-Mate — 다온플레이스 업무 도우미"
authors = ["daonplace"]
edition = "2021"

[lib]
name = "d_mate_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["cookies", "json"] }
rusqlite = { version = "0.32", features = ["bundled"] }
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
chrono = "0.4"
once_cell = "1"
dirs = "5"
native-tls = "0.2"
log = "0.4"
env_logger = "0.11"
